# pyton-course

./: .gitignore  README.md  README.md~  pyproject.toml
Chapter_03/HTTP_Server/: main.py~
Chapter_10/fastapi_additional/: .env
Chapter_12/fastapi_docs/docs/_build/html/: .buildinfo
Chapter_12/neoversity_python_final/: .coverage  .env
