[tool.poetry]
name = "fullstack-web-development-with-python"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
flask = "^3.0.3"
aiofile = "^3.9.0"
aiopath = "^0.7.7"
aioshutil = "^1.5"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
